@@ -279,7 +279,6 @@ typedef struct _SLPSrvAck
 }SLPSrvAck;
 
 
-
 /*=========================================================================*/
 typedef struct _SLPDAAdvert
 /*=========================================================================*/
